playground/k3s-postgres-adminer-exercise/adminer/adminer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer-deployment
  labels:
    app: adminer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adminer
  template:
    metadata:
      labels:
        app: adminer
    spec:
      containers:
        - name: adminer
          image: adminer:latest
          ports:
            - containerPort: 8080
---
# https://kubernetes.io/docs/concepts/services-networking/service/#services-in-kubernetes
# https://kubernetes.io/docs/concepts/services-networking/service/#publishing-services-service-types
# https://kubernetes.io/docs/concepts/services-networking/service/#loadbalancer
apiVersion: v1
kind: Service
metadata:
  name: adminer-service
spec:
  selector:
    app: adminer
  type: LoadBalancer # accepts external requests by assigning the service an external ip address
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30081 # (>30000,<32000) the port where the service external ip is bound to
