playground/k3s-postgres-adminer-exercise/adminer/adminer-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adminer-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: adminer-dashboard.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adminer-service
                port:
                  number: 9000
